metadata/Innovation Hub/objects/Prototype__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Describe Your Prototype</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_File_Id__c</fullName>
        <inlineHelpText>Enter in the public file Id</inlineHelpText>
        <label>Video File Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Title__c</fullName>
        <inlineHelpText>Please enter the title of the video you wish to add to the record</inlineHelpText>
        <label>Video Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <inlineHelpText>Please enter the embed URL for your chosen video</inlineHelpText>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
                <value>
                    <fullName>Value 4</fullName>
                </value>
                <value>
                    <fullName>Value 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prototype</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prototype Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prototypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>